<?xml version="1.0"?>
<?xml-model href="http://download.ros.org/schema/package_format3.xsd" schematypens="http://www.w3.org/2001/XMLSchema"?>
<package format="3">
  <name>g7_world</name>
  <version>0.0.0</version>
  <description>Group 7 custom world Project</description>
  <maintainer email="waterthree@gmail.com">Group 7</maintainer>
  <license>Apache-2.0</license>

  <test_depend>ament_copyright</test_depend>
  <test_depend>ament_flake8</test_depend>
  <test_depend>ament_pep257</test_depend>
  <test_depend>python3-pytest</test_depend>
  <buildtool_depend>ament_python</buildtool_depend>
  <depend>gazebo_ros_pkgs</depend>
  <depend>geometry_msgs</depend>
  <depend>nav_msgs</depend>
  <depend>rclpy</depend>
  <depend>sensor_msgs</depend>
  <depend>tf2</depend>
  <depend>cv_bridge</depend>

  <export>
    <build_type>ament_python</build_type>
    <gazebo_ros gazebo_model_path="turtlebot3_gazebo/models"/>
  </export>
</package>
